--- a/ILIve/app/src/main/res/layout/fragment_my.xml
+++ b/ILIve/app/src/main/res/layout/fragment_my.xml
@@ -61,7 +61,7 @@
             android:layout_height="30dp"
             android:layout_marginEnd="30dp"
             android:transitionName="ImageQrCode"
-            android:src="@mipmap/icon_qr_code_1"
+            android:src="@mipmap/icon_qr_code"
             app:layout_constraintBottom_toBottomOf="@+id/tv_phone"
             app:layout_constraintEnd_toStartOf="@id/iv_arrow"
             app:layout_constraintTop_toTopOf="@+id/tv_phone" />
