--- a/ILIve/app/src/main/res/layout/fragment_qr_code_card.xml
+++ b/ILIve/app/src/main/res/layout/fragment_qr_code_card.xml
@@ -1,63 +1,107 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white_80">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/info_root"
-        android:layout_width="0dp"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_view_root"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/red"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:cardElevation="2dp"
+        app:cardPreventCornerOverlap="true"
+        app:cardCornerRadius="7dp">
 
-<!--        <androidx.cardview.widget.CardView-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content">-->
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:orientation="vertical">
 
-<!--            <ImageView-->
-<!--                android:id="@+id/iv_avatar"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content" />-->
+            <!--  上半部分  -->
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/top_info_root"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-<!--        </androidx.cardview.widget.CardView>-->
+                <ImageView
+                    android:id="@+id/iv_avatar"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-<!--        <com.hhsj.ilive.widget.CustomFontTextView-->
-<!--            android:id="@+id/tv_nick_name"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content" />-->
+                <com.hhsj.ilive.widget.CustomFontTextView
+                    android:id="@+id/tv_nick_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="27dp"
+                    android:textColor="@color/text_user_info_qr_code"
+                    android:textSize="20sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/iv_avatar"
+                    app:textFont="Regular" />
 
-<!--        <com.hhsj.ilive.widget.CustomFontTextView-->
-<!--            android:id="@+id/tv_phone"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content" />-->
+                <com.hhsj.ilive.widget.CustomFontTextView
+                    android:id="@+id/tv_phone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="22dp"
+                    android:textColor="@color/black_40"
+                    android:textSize="12sp"
+                    app:layout_constraintStart_toStartOf="@id/tv_nick_name"
+                    app:layout_constraintTop_toBottomOf="@id/tv_nick_name"
+                    app:textFont="Normal" />
 
-<!--        <ImageView-->
-<!--            android:id="@+id/iv_qr_code"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content" />-->
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
-<!--        <com.hhsj.ilive.widget.CustomFontTextView-->
-<!--            android:id="@+id/tv_tips"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content" />-->
+            <!--  下半部分  -->
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/bottom_info_root"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-<!--        <ImageView-->
-<!--            android:id="@+id/iv_refresh"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content" />-->
+                <View
+                    android:id="@+id/view_bg"
+                    android:background="@color/white"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
 
-<!--        <View-->
-<!--            android:id="@+id/white_bg"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"/>-->
+                <ImageView
+                    android:id="@+id/iv_qr_code"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@color/blue_100"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+                <com.hhsj.ilive.widget.CustomFontTextView
+                    android:id="@+id/qr_code_tips"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="11sp"
+                    app:textFont="Light"
+                    android:text="@string/qr_code_card_qr_code_tips"
+                    android:textColor="@color/register_login_edit_hint"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/iv_qr_code"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+                <ImageView
+                    android:id="@+id/iv_refresh"
+                    android:layout_width="25dp"
+                    android:layout_height="21dp"
+                    android:background="@color/blue_100"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
+</FrameLayout>
