--- a/ILIve/app/src/main/res/values/colors.xml
+++ b/ILIve/app/src/main/res/values/colors.xml
@@ -30,6 +30,8 @@
     <color name="text_enabled_color">#FFFFFF</color>
     <color name="background_main_bottom_tab">#F9F9F9</color>
 
+    <color name="text_user_info_qr_code">#323237</color>
+
     <color name="white_100">#FFFFFF</color>
     <color name="white_80">#F2F2F2</color>
     <color name="white_60">#E2E2E2</color>
